[package]
name = "imgtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

# Image process lib
image = "0.23"
webp = { version = "0.2", features = ["img"]}

[dev-dependencies]
tempfile = "3.2"