[package]
name = "imgtool"
version = "0.1.0"
edition = "2021"
authors = ["LI Rui <me@lirui.tech>"]
license = "Apache-2.0"
description = "A simple mage processing tool"
readme = "README.md"
homepage = "https://github.com/KernelErr/imgtool"
repository = "https://github.com/KernelErr/imgtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

# Image process lib
image = "0.23"
webp = { version = "0.2", features = ["img"]}

[dev-dependencies]
tempfile = "3.2"