[package]
name = "imgtool"
version = "0.1.0"
edition = "2021"
authors = ["LI Rui <me@lirui.tech>"]
license = "Apache-2.0"
description = "A simple image processing tool."
readme = "README.md"
homepage = "https://github.com/KernelErr/imgtool"
repository = "https://github.com/KernelErr/imgtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num_cpus = "1.0"
deadqueue = "0.2.0"
tokio = { version = "1.15.0", features = ["full"] }

# Image process lib
image = "0.23"
webp = { version = "0.2", features = ["img"]}

# Cli lib
clap = { version = "3.0.0", features = ["cargo"] }
wax = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
